Refactor threads overriding run() that have other definitions