@@ -114,11 +114,8 @@ public class TestStressLucene extends TestRTGBase {
 
     for (int i = 0; i < nWriteThreads; i++) {
       Thread thread =
-          new Thread("WRITER" + i) {
+          Thread.ofVirtual().name("WRITER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.get() > 0) {
                   int oper = rand.nextInt(100);
@@ -281,19 +278,15 @@ public class TestStressLucene extends TestRTGBase {
               } catch (Exception ex) {
                 throw new RuntimeException(ex);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
 
     for (int i = 0; i < nReadThreads; i++) {
       Thread thread =
-          new Thread("READER" + i) {
+          Thread.ofVirtual().name("READER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.decrementAndGet() >= 0) {
                   // bias toward a recently changed doc
@@ -369,8 +362,7 @@ public class TestStressLucene extends TestRTGBase {
                 operations.set(-1L);
                 throw new RuntimeException(e);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
