@@ -124,11 +124,8 @@ public class TestStressUserVersions extends TestRTGBase {
 
     for (int i = 0; i < nWriteThreads; i++) {
       Thread thread =
-          new Thread("WRITER" + i) {
+          Thread.ofVirtual().name("WRITER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.get() > 0) {
                   int oper = rand.nextInt(100);
@@ -251,19 +248,15 @@ public class TestStressUserVersions extends TestRTGBase {
                 log.error("", e);
                 throw new RuntimeException(e);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
 
     for (int i = 0; i < nReadThreads; i++) {
       Thread thread =
-          new Thread("READER" + i) {
+          Thread.ofVirtual().name("READER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.decrementAndGet() >= 0) {
                   // bias toward a recently changed doc
@@ -332,8 +325,7 @@ public class TestStressUserVersions extends TestRTGBase {
                 log.error("", e);
                 throw new RuntimeException(e);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
